# sweb-api

./: .flake8  .gitignore  LICENSE  README.md  api-docs-urls.md  pyproject.toml
.github/workflows/: release.yml
docs/: domains.md  examples.md  instructions.md  pay.md  vps.md
docs/domains/: bonus.md  dns.md  domains.md  persons.md
docs/vh/: backup.md  cron.md  ddg.md  disk-usage.md  hosting.md  load.md  mail.md  sites.md  ssl.md  tariff.md  utils.md
docs/vps/: backup.md  balancer.md  dbaas.md  ip.md  monitoring.md  protected-ip.md  remote-backup.md  ssl.md  vps.md
docs/vps/monitoring/: checks.md  contacts.md
src/: __init__.py
src/api/: base.py  domains.py  pay.py  vh.py  vps.py
src/http/: client.py
sweb_api/: __init__.py
sweb_api/api/: __init__.py  base.py  domains.py  pay.py  vh.py  vps.py
sweb_api/exceptions/: exceptions.py
sweb_api/http/: client.py
tests/: test_swebpy.py
