[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sweb-api"
version = "0.1.2"
description = "Python client for Sweb.ru API"
readme = "README.md"
authors = [
    {name = "zullusa", email = "zullusa@gmail.com"}
]
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["api", "sweb", "hosting", "vps", "domains", "json-rpc"]
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/zullusa/sweb-api"
Repository = "https://github.com/zullusa/sweb-api"

[tool.setuptools.packages.find]
where = ["."]
include = ["sweb_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
